# judy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_CONTEXT.md  Judy_Iteration1_Brief.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.ipynb
docs/: DEMO_PLAN.md  DESIGN_DECISIONS.md  EXPERIMENT_PLAN.md  FINDINGS.md  IMPLEMENTATION.md  INDEX.md  MODEL_TUNING_PLAN.md  ROADMAP.md  SFT_METHODOLOGY.md  SFT_REVIEW_NOTES.md  UI_DEPLOYMENT.md  V4_LITERARY_DATA.md  VARIANTS.md  VISION_AND_IDEAS.md
judy/: __init__.py  config.py
outputs/: judy_value_gap_deck.pptx  judy_value_gap_deck.pptx.inspect.ndjson  judy_value_gap_deck_4min.pptx  judy_value_gap_deck_4min.pptx.inspect.ndjson
scripts/: build_comparison_report.py  build_literary_benchmark.py  build_tweet_benchmark.py  check_openai_auth.py  eval_sft_format.py  eval_tuned_judge.py  export_judy_benchmark_sft.py  export_objective_sft_checkpoints.py  export_preference_dataset.py  export_sft_dataset.py  export_sft_format_matched.py  fetch_benchmark_sample.py  fetch_judgebench_sample.py  fetch_llmbar_adversarial.py  generate_creative_pref_benchmark.py  generate_judy_benchmark.py  merge_judy_benchmarks.py  plot_learning_curve.py  prepare_continuation_sft.py  run_gemini_sft.py  run_v5.py
tests/: test_api_offline.py  test_continual_offline.py  test_creative_jury.py  test_literary_builder.py  test_loop_offline.py  test_preference_offline.py  test_reasoning_loop.py  test_synth_benchmark.py  test_teacher_loop_offline.py  test_tuning_export.py  test_units.py
ui/: .dockerignore  (+10 more)
(+63 files in other folders)
