[project]
name = "judy"
version = "0.1.0"
description = "Judy — a self-improving LLM-as-a-judge for pairwise QA (iteration 1)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["judy*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
